Bug 346001 - Transactions in an investment account do not allow zero total fees
Summary: Transactions in an investment account do not allow zero total fees
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-08 22:14 UTC by Ian Neal
Modified: 2018-03-28 08:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2015-04-08 22:14:40 UTC
If you try to enter a transaction into an investment account that has a zero total for the fees the enter button is disabled.
I have to pay a quarterly fee which becomes a "Commission Credit" so, for each trade I make, a commission deduction should be made until there is no credit left at which point it should be deducted as a fee from the trade.
If I try to set up the fee as a split transaction, going to an expense category and a full/partial reversal in the commission account, zero total fees are not allowed.

Reproducible: Always

Steps to Reproduce:
1. Create an expense category for fees
2. Create an account for commission credits
3. Create a buy transaction with a fee and use the split functionality to have an expense of 1.50 and a reversal into the commission credits account of 1.50 so that the split total is zero.

Actual Results:  
1. Enter button is disabled.

Expected Results:  
1. Enter button is enabled and you can enter a transaction.
Comment 1 wojnilowicz 2017-02-17 20:34:56 UTC
Git commit 6c8ea50f92eed6915f18f4ed4f75af1147476d4a by Łukasz Wojniłowicz.
Committed on 17/02/2017 at 20:15.
Pushed by wojnilowicz into branch 'master'.

Allow zero total fees transactions

Summary:
The total amount of fees is unimportant. Important is that splits that
compose fee are not equall to zero.
FIXED-IN: 5.0
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>
Differential Revision: https://phabricator.kde.org/D4397

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +23   -6    kmymoney/dialogs/investactivities.cpp
M  +8    -0    kmymoney/dialogs/investtransactioneditor.h

https://commits.kde.org/kmymoney/6c8ea50f92eed6915f18f4ed4f75af1147476d4a