Allow zero total fees transactions

Summary:
The total amount of fees is unimportant. Important is that splits that
compose fee are not equall to zero.

BUG: 346001
FIXED-IN: 5.0
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>
Differential Revision: https://phabricator.kde.org/D4397

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>